--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -18,8 +18,9 @@
     <p>Use the left and right arrow to control the car!</p>
     <img src="./images/arrows.png" alt="" class="arrows-img">
   </div>
-  <div id="game-board">
-
+  <div>
+    <!-- make sure canvas has id we are targeting (in this case that's id="game-board") -->
+    <canvas id="game-board" width="500" height="600"></canvas>
   </div>
 </body>
 </html>
